--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "export": "next build && next export || next build && node ./scripts/export-workaround.js"
   },
   "dependencies": {
+    "@ai-sdk/openai": "2.0.0-beta.5",
+    "@ai-sdk/react": "2.0.0-beta.11",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -53,6 +55,7 @@
     "@vercel/blob": "^1.1.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "5.0.0-beta.11",
     "bcryptjs": "^3.0.2",
     "botid": "^1.4.1",
     "class-variance-authority": "^0.7.1",
