--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@ai-sdk/openai": "2.0.0-beta.5",
     "@ai-sdk/react": "2.0.0-beta.11",
-    "ai": "5.0.0-beta.11",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
@@ -44,6 +43,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.67.3",
@@ -56,6 +56,7 @@
     "@vercel/blob": "^1.1.1",
     "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "5.0.0-beta.11",
     "bcryptjs": "^3.0.2",
     "botid": "^1.4.1",
     "class-variance-authority": "^0.7.1",
