update seo + README

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,11 @@
 # Required environment variables
 FAL_KEY=your-fal-key-here
 OPENAI_API_KEY=your-openai-api-key-here
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Rate limiting (optional)
 KV_REST_API_URL=your-kv-rest-api-url
 KV_REST_API_TOKEN=your-kv-rest-api-token
 
-# Optional environment variables
-OPENAI_MODEL=gpt-4.1-mini
-FETCH_TIMEOUT=30000
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-
-# Test mode configuration (optional)
+# Test mode
 TEST_MODE=false
-TEST_DELAY=5000
-TEST_IMAGE_URL=https://v3.fal.media/files/elephant/00rs5Nhmp2JZ0WSnGNdUM_1752483234655.jpeg
